# BCBSDataEngine

./: ### PACS Environment Jupyter Notebook.py  .coveragerc  .replit  .replit.new  .replit.old  .replit.workflow.json  404.html  AgentDashboard.js  Dashboard.js  Dashboard.js.new  Dockerfile  ENHANCED_API_README.md  ENHANCED_GIS_README.md  ENHANCED_VALUATION_README.md  MPC_PROTOCOL_README.md  NEW_README.md  README.md  WORKFLOW_README.md  WORKFLOW_SETUP.md  WhatIfAnalysis.js  add_benton_county_sample.py  agent-dashboard.html  api.py  app.py  app_minimal.py  bash_http_server.sh  bash_http_server_no_nc.sh  bash_http_server_simple.sh  bash_server.js  basic_api.py  basic_diagnostic.sh  basic_server.js  basic_valuation_test.py  bcbs_dashboard.html  busybox_http_server.sh  check_python.py  custom_diagnostic.sh  dashboard.html  dashboard_demo.html  dashboard_implementation_summary.md  (+150 more)
.replit.workflow/: API.json  APIServer.json  ApiServer.json  Dashboard.json  DashboardDemo.json  DashboardServer.json  DiagnosticServer.json  Diagnostics.json  FlaskWebApp.json  NodeServer.json  Start.json  Test.json  TestEnhancedMetrics.json  TestEnhancedValuation.json  WebApp.json  WebDashboard.json
agents/: bcbs-bootstrap-commander.json  bcbs-cascade-operator-updated-v2.json  bcbs-cascade-operator-updated.json  bcbs-cascade-operator-v6.json  bcbs-cascade-operator.json  bcbs-tdd-validator.json  bootstrap-commander.json  god-tier-builder.json  tdd-validator.json
api/: __init__.py  routes.py
attached_assets/: Pasted-I-ve-reviewed-the-question-details-and-taken-a-look-at-the-provided-URL-Here-s-a-summary-of-the-sit-1743472884325.txt
configs/: database_config.json  etl_config.json  field_mappings.json  module_config.json
data/: generate_test_data.py  pacs_sample.csv  test_properties.csv
db/: __init__.py  database.py  init.js  models.py  schema.sql
deployment/: Dockerfile  docker-compose.yml
etl/: __init__.py  data_validation.py  mls_scraper.py  narrpr_scraper.py  pacs_import.py
etl_outputs/: validation_results_20250329_220302.json
public/: Dashboard.js  index.html
src/: __init__.py  enhanced_gis_features.py  gis_integration.py  mpc_protocol.py  valuation.py
templates/: 403.html  404.html  500.html  base.html  dashboard.html  index.html  layout.html  login.html  profile.html  properties.html  property_detail.html  property_search.html  reactive_dashboard.html  register.html  search.html  search_results.html  validation.html  valuation_form.html  valuation_result.html  what_if_analysis.html
tests/: __init__.py  test_advanced_valuation.py  test_api_diagnostics.py  test_basic.py  test_core.py  test_core_valuation.py  test_data_validation.py  test_enhanced_gis_features.py  test_environment.py  test_etl_integration.py  test_integration.py  test_integration_advanced.py  test_mls_scraper.py  test_narrpr_scraper.py  test_new_integration.py  test_pacs_import.py  test_valuation.py
utils/: __init__.py  logging_config.py
(+32 files in other folders)
