[tool.poetry]
name = "bcbs-values"
version = "0.1.0"
description = "BCBS Values - Property Valuation"
authors = ["BCBS Values Team"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.0"
flask-sqlalchemy = "^3.1.0"
flask-wtf = "^1.2.0"
wtforms = "^3.0.0"
pytest = "^7.0.0"
requests = "^2.0.0"
python-dotenv = "^1.0.0"
pandas = "^2.0.0"
numpy = "^1.0.0"
scikit-learn = "^1.0.0"
lightgbm = "^3.0.0"
xgboost = "^1.0.0"
statsmodels = "^0.13.0"
geopy = "^2.0.0"
psycopg2-binary = "^2.9.0"
pyjwt = "^2.8.0"
flask-login = "^0.6.2"
flask-cors = "^4.0.0"
fastapi = "^0.110.0"
httpx = "^0.27.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"