[tool.poetry]
name = "bcbs-values"
version = "0.1.0"
description = "An advanced AI-powered real estate valuation and exploration platform"
authors = ["BCBS Values Team <info@bcbsvalues.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
flask-sqlalchemy = "^3.0.5"
flask-login = "^0.6.2"
werkzeug = "^2.3.6"
pyjwt = "^2.8.0"
psycopg2-binary = "^2.9.6"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-flask = "^1.2.0"
black = "^23.7.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']